# acoupi

./: .bumpversion.toml  .gitignore  404.html  CODE_OF_CONDUCT.md  Makefile  README.md  dbtest.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
authors/: index.html
code_of_conduct/: index.html
contributing/: index.html
css/: style.css
docs/: README.md  contributing.md  explanation.md  faq.md  index.md  terms.md
docs/css/: style.css
docs/developer_guide/: architecture.md  cli.md  components.md  data_schema.md  index.md  inner_workings.md  programs.md  tasks.md
docs/explaination/: data_schema.md  index.md  table.html
docs/explanation/: application.md  architecture.md  cli.md  components.md  data_schema.md  index.md  programs.md  system.md  tasks.md
docs/how_to_guide/: components.md  data_schema.md
docs/howtoguide/: components.md  data_schema.md  index.md  programs.md  share_configurations.md
docs/old_docs/: install-notes.txt  running-notes.md
docs/reference/: cli.md  components.md  data.md  devices.md  index.md  programs.md  system.md  tasks.md
docs/source/: conf.py  index.rst  installation.rst  introduction.rst  programs.rst  quickstart.rst
docs/source/advanced_guide/: components.rst  data.rst  examples.rst  index.rst  overview.rst  programs.rst  tasks.rst
docs/source/development/: contributing.rst  how_it_works.rst  index.rst
docs/source/reference/: cli.rst  components.rst  data.rst  index.rst  programs.rst  storages.rst  system.rst  tasks.rst  types.rst
docs/tutorials/: configuration.md  deployment.md  index.md  installation.md
docs/user_guide/: cli.md  configurations.md  faq.md  index.md  installation.md  old_faq.md  programs.md
explanation/: index.html
explanation/architecture/: index.html
explanation/components/: index.html
explanation/data_schema/: index.html
explanation/programs/: index.html
explanation/system/: index.html
explanation/tasks/: index.html
faq/: index.html
howtoguide/: index.html
howtoguide/components/: index.html
howtoguide/data_schema/: index.html
howtoguide/programs/: index.html
howtoguide/share_configurations/: index.html
installation_docs/: README.md  running_notes.md
license/: index.html
reference/: index.html
reference/cli/: index.html
reference/components/: index.html
reference/data/: index.html
reference/devices/: index.html
reference/programs/: index.html
reference/system/: index.html
reference/tasks/: index.html
scripts/: acoupi_install.sh  benchmark_metadata_store.py  install_pyaudio.sh  setup.sh  setup_service.sh
search/: search_index.json
src/: config.py  config_mqtt_template.py  main.py  main_acoupi.py  old_testacoupi.py  test_acoupi.py
src/acoupi/: __main__.py  acoupi_install.sh  acoupi_types.py  audio_recorder.py  audio_recording.py  audio_recording_test.py  classtype.py  cli.py  config.py  config.yaml  config_schemas.py  data.py  detection_filters.py  devices.py  files.py  heartbeat.py  heatbeat_crontab.py  inotify_acoupi.py  main.py  messengers.py  model.py  model_ouput.py  model_output.py  processing_filters.py  record_audio.py  recording_conditions.py  recording_filters.py  recording_managers.py  recording_schedulers.py  requirements.txt  run_acoupi.py  saving_filters.py  saving_managers.py  schedule_managers.py  system.py  template_config_iotmessages.py  templates.py  test_acoupi.py  test_acoupi_p1.py  tui.py  (+3 more)
src/acoupi/clean_system/: clean_db_tables.py  clean_log.sh  (+2 more)
terms/: index.html
tests/: conftest.py  test_audio_recording.py  test_devices.py  test_file_managers.py  test_model.py  test_processing_filters.py  test_recording_conditions.py  test_recording_filters.py  test_recording_managers.py  test_recording_schedulers.py  test_schedule_managers.py  test_sqlite_message_store.py  test_sqlite_store.py  test_utils.py
tests/test_cli/: conftest.py  test_check.py  test_config.py  test_setup.py  test_tasks.py
tests/test_components/: test_audio_recording.py  test_file_managers.py  test_message_builders.py  test_message_factories.py  test_messengers.py  test_model.py  test_output_cleaners.py  test_recording_conditions.py  test_recording_filters.py  test_saving_filters.py  test_saving_managers.py  test_sqlite_message_store.py  test_sqlite_store.py  test_summariser.py
tests/test_devices/: test_audio.py  test_metrics.py  test_rpi.py
tests/test_programs/: conftest.py  test_basic_program.py  test_basic_template.py  test_callbacks.py  test_detection_template.py  test_messaging_template:.py  test_messaging_templates.py
tests/test_system/: test_celery.py  test_config.py  test_constants.py  test_datetime.py  test_deployments.py  test_lifecycle.py  test_parsing.py  test_programs.py  test_tasks.py  test_workers.py
tests/test_tasks/: conftest.py  test_heartbeat_task.py  test_management_task.py  test_messaging.py  test_recording_task.py  test_schedules.py  test_summary_task.py
tutorials/: index.html
tutorials/configuration/: index.html
tutorials/deployment/: index.html
tutorials/installation/: index.html
(+304 files in other folders)
