[project]
name = "acoupi"
version = "0.1.0"
description = "Classifier for bioacoustic devices"
authors = [
    {name = "Aude Vuilli", email = "aude.vuilliomenet.18@ucl.ac.uk"},
    {name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.uk.ac"},
]
dependencies = [
    "pyalsaaudio>=0.9.2",
    "pony>=0.7.16",
    "pyaudio>=0.2.13",
    "sounddevice>=0.4.6",
    "pyyaml>=6.0",
    "paho-mqtt>=1.6.1",
    "pydantic>=1.10.8",
    "click>=8.1.3",
    "astral>=3.2",
    "celery>=5.2.7",
    "Jinja2>=3.1.2",
]
requires-python = ">=3.7"
readme = "README.md"
license = {text = "GPL-3.0"}

[project.scripts]
acoupi = "acoupi.cli:acoupi"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 79

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["src/acoupi/templates/"]
include = ["src/acoupi/**/*.py", "tests/**/*.py"]
pythonVersion = "3.7"

[tool.mypy]
mypy_path = ".venv/lib/python3.10/site-packages"

[tool.pydocstyle]
convention = "google"

[tool.coverage.run]
source = [
    "src/acoupi",
]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.2.2",
    "pony-stubs>=0.5.2",
    "coverage[toml]>=7.2.2",
    "sphinx>=5.3.0",
    "furo>=2023.3.27",
    "sphinx-copybutton>=0.5.1",
    "sphinx-autobuild>=2021.3.14",
    "pytest-httpserver>=1.0.6",
    "black>=23.3.0",
    "pyright>=1.1.337",
    "ruff>=0.1.6",
]

