[project]
name = "acoupi"
version = "0.1.0"
description = "Classifier for bioacoustic devices"
authors = [
  { name = "Aude Vuilli", email = "aude.vuilliomenet.18@ucl.ac.uk" },
  { name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.uk.ac" },
]
dependencies = [
  "pony>=0.7.16",
  "pyaudio>=0.2.13",
  "sounddevice>=0.4.6",
  "pyyaml>=6.0",
  "paho-mqtt>=1.6.1",
  "pydantic>=1.10.8",
  "click>=8.1.3",
  "astral>=3.2",
  "celery>=5.4.0",
  "Jinja2>=3.1.2",
  "pydantic-settings>=2.0.3",
  "pytz>=2023.3.post1",
  "requests>=2.31.0",
  "eventlet>=0.36.1",
  "pygments>=2.18.0",
  "pydantic-extra-types>=2.9.0",
]
requires-python = ">=3.8,<3.12"
readme = "README.md"
license = { text = "GPL-3.0" }

[project.scripts]
acoupi = "acoupi.cli:acoupi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
  "pytest>=7.4.4",
  "pony-stubs>=0.5.2",
  "coverage[toml]>=7.2.2",
  "sphinx>=5.3.0",
  "furo>=2023.3.27",
  "sphinx-copybutton>=0.5.1",
  "sphinx-autobuild>=2021.3.14",
  "pytest-httpserver>=1.0.6",
  "black>=23.3.0",
  "pyright>=1.1.375",
  "ruff>=0.1.6",
  "isort>=5.11.5",
  "mkdocs>=1.5.3",
  "mkdocs-material>=9.2.7",
  "mkdocstrings[python]>=0.22.0",
  "pytest-celery>=1.0.1",
  "flower>=2.0.1",
  "mkdocs-click>=0.8.1",
  "mkdocs-gitbook>=0.0.1",
  "mkdocs-video>=1.5.0",
  "pytest-mock>=3.14.0",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
exclude = ["src/acoupi/templates/"]
include = ["src/acoupi/**/*.py", "tests/**/*.py"]
pythonVersion = "3.9"

[tool.ruff]
line-length = 79
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "acoupi"]

[tool.coverage.run]
source = ["src/acoupi"]
