[project]
name = "acoupi"
version = "0.5.2"
description = "Classifier for bioacoustic devices"
authors = [
  { name = "Aude Vuilli", email = "aude.vuilliomenet.18@ucl.ac.uk" },
  { name = "Santiago Martinez Balvanera", email = "santiago.balvanera.20@ucl.uk.ac" },
]
dependencies = [
  "pyaudio>=0.2.13",
  "pyyaml>=6.0",
  "paho-mqtt>=1.6.1",
  "pydantic>=1.10.8",
  "click>=8.1.3",
  "astral>=3.2",
  "celery>=5.4.0",
  "Jinja2>=3.1.2",
  "pydantic-settings>=2.0.3",
  "requests>=2.31.0",
  "eventlet>=0.36.1",
  "pygments>=2.18.0",
  "pydantic-extra-types>=2.9.0",
  "omegaconf>=2.3.0",
  "guano>=1.0.16",
  "psutil>=7.2.2",
  "textual>=8.2.8",
]
requires-python = ">=3.10,<3.15"
readme = "README.md"
license = { text = "GPL-3.0" }

[project.scripts]
acoupi = "acoupi.cli:acoupi"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=7.4.4",
  "coverage[toml]>=7.2.2",
  "pytest-httpserver>=1.0.6",
  "ruff>=0.1.6",
  "mkdocs>=1.5.3,<2.0",
  "mkdocs-material>=9.2.7",
  "mkdocstrings[python]>=0.22.0",
  "pytest-celery>=1.0.1",
  "mkdocs-click>=0.8.1",
  "mkdocs-gitbook>=0.0.1",
  "mkdocs-video>=1.5.0",
  "pytest-mock>=3.14.0",
  "pytest-timeout>=2.4.0",
  "ty>=0.0.49",
  "flower>=2.0.1",
]

[tool.ruff]
line-length = 79
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "B", "Q", "I", "D"]
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.isort]
known-local-folder = ["src", "acoupi"]

[tool.coverage.run]
source = ["src/acoupi"]
